# ros2-xarm-pick-and-place-vision

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  DESIGN.md  GAZEBO_SIMULATION.md  PACKAGE_STRUCTURE.md  colcon-build-modules-package-xml.md  cyclonedds_macos.md  ros2-package-files.md  ros2-pubsub-foxglove-architecture.md  ros2-pubsub-rviz-architecture.md  scripts.md
scripts/: entrypoint.sh
src/bringup/estica_bringup/: CMakeLists.txt  package.xml
src/bringup/estica_bringup/launch/: cell_display.launch.py
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/description/cell_description/: CMakeLists.txt  package.xml
src/description/cell_description/urdf/: cell.urdf.xacro
src/description/cheese_description/: CMakeLists.txt  package.xml
src/description/cheese_description/urdf/: cheese.urdf.xacro
src/description/conveyor_description/urdf/: conveyor.urdf.xacro
src/description/orbbec_description/: CMakeLists.txt  package.xml
src/description/orbbec_description/urdf/: astra_2.urdf.xacro
src/description/xarm_description/: CMakeLists.txt  package.xml
src/description/xarm_description/urdf/: xarm6_with_gripper.urdf.xacro
src/description/xarm_gripper/: CMakeLists.txt  package.xml
src/hello_cpp/: CMakeLists.txt  package.xml
src/hello_cpp/src/: publisher.cpp  subscriber.cpp
src/hello_ros2/hello_ros2/: marker_publisher.py
src/orbbec_description/: CMakeLists.txt  package.xml
src/orbbec_description/launch/: display_foxglove.launch.py
src/orbbec_description/urdf/: astra_2.urdf.xacro
src/sensor_sim/: package.xml  setup.cfg  setup.py
src/sensor_sim/sensor_sim/: alert_subscriber.py  temperature_publisher.py
src/simulation/estica_gazebo/: CMakeLists.txt  package.xml
src/simulation/estica_gazebo/src/: cheese_spawner.cpp
src/simulation/estica_gazebo/worlds/: cell.world
src/tutorial_interfaces/: CMakeLists.txt  package.xml
src/tutorial_interfaces/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/xarm_description/: package.xml  setup.py
src/xarm_description/launch/: foxglove.launch.py  gazebo_camera_test.launch.py
src/xarm_description/urdf/: xarm6_with_gripper.urdf
src/xarm_description/worlds/: camera_test.world
src/xarm_description/xarm_description/: arm_demo.py
src/xarm_gripper/: package.xml
