<?xml version="1.0"?>
<package format="3">
  <name>xarm_description</name>
  <version>0.1.0</version>
  <description>xArm6 URDF, mesh files, and visualization launch</description>
  <maintainer email="ywspeakdb@gmail.com">rustam</maintainer>
  <license>BSD</license>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
