<?xml version="1.0"?>
<package format="3">
  <name>xarm_gripper</name>
  <version>0.1.0</version>
  <description>xArm parallel gripper mesh files</description>
  <maintainer email="ywspeakdb@gmail.com">rustam</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
