<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>estica_gazebo</name>
    <version>1.0.0</version>
    <description>Gazebo simulation layer: world file + cheese spawner node. Launch files live in estica_bringup.</description>
    <maintainer email="rustam.atakisiev@gmail.com">rustam</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>gazebo_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>

    <exec_depend>gazebo_ros</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
